examples/type_system/failing/27_adt_wildcard_guard_not_catchall.flx
// E083: wildcard with guard is not an unconditional catch-all.

data Color {
    Red,
    Blue,
}

fn classify(c: Color) -> Int {
    match c {
        _ if true -> 1,
    }
}

fn main() {
    classify(Red)
}
